Made some changes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,9 +9,8 @@ services:
       - /app/node_modules
     environment:
       - PORT=4000
-      - MONGODB_URI=mongodb://mongo:27017/cuzradio
-      - MONGODB_URI_TEST=mongodb://mongo:27017/cuzradio-test
-      - MONGODB_URI_PROD=mongodb://mongo:27017/cuzradio
+      - MONGODB_URI=mongodb://mongo:27017/loger-ticket
+      - MONGODB_URI_TEST=mongodb://mongo:27017/loger-ticket-test
       - JWT_SECRET=mynewjsonwebtoken
       - JWT_EXPIRES_IN=1hr
     depends_on:
